<resources>

    <!-- About -->
    <string name="app_name">RRPodkast</string>

    <string name="about_app">Om appen</string>
    <string name="about_app_disclaimer">
        Denne appen er ikke laget i samarbeid med NRK eller Radioresepsjonen. Appen er basert på NRKs RSS-feed og ment for RR-lyttere på jakt etter gode gamle (eller nye) RR-episoder.
    </string>
    <string name="about_app_byline">Laget av Mathiazom</string>
    <string name="about_app_version">Versjon: 1.4.0</string>

    <!-- Filtering -->
    <string name="action_filter">Sorter</string>
    <string name="action_play_random_pod">Spill tilfeldig episode</string>
    <string name="filter_title_all">Episoder</string>
    <string name="filter_not_completed">Kun uhørte</string>
    <string name="result_num_suffix">som passer søket ditt</string>
    <string name="no_result_msg">Ingen resultater for søket</string>


    <string name="downloading">Laster ned …</string>

    <string name="new_pod_mark">NY</string>


    <!-- SETTINGS STRINGS -->
    <string name="random_pod_section">Tilfeldige podkaster</string>
    <string name="random_select_setting_name">Velg fra</string>
    <string name="random_select_setting_title">Velg filter for tilfeldige podkaster</string>

    <string name="space_usage_template">- MB / - nedlastinger</string>

    <string-array name="random_select_from_array">
        <item>Alle</item>
        <item>Uhørt</item>
        <item>Lyttet til</item>
        <item>Ikke lastet ned</item>
        <item>Lastet ned</item>
    </string-array>

    <string name="filter_pod_section">Filtrer episoder</string>
    <string name="filter_select_setting_name">"Uhørt"-filter</string>

    <string name="space_usage_title">Bruk av plass på enheten:</string>

    <string name="episoder">episoder</string>
    <string name="pod_description_template">Faren til Bjarte er en karakter løst basert på Bjartes far Odd Bjørn Tjøstheim. Han er en pensjonert prest og ringer Bjarte regelmessig fra familiens hjemsted, Randaberg. Han er skeptisk til at Bjarte har flyttet til Oslo, og er bekymret for at sønnen er innblandet i fyll, narko og hor. (Kilde: http://rr.eikern.net/wiki/Faren_til_Bjarte)</string>
    <string name="pod_title_template">Ornsdag 42. september 2020</string>
    <string name="pod_details_template">Sesong 20 • 69 min</string>
    <string name="search_spinner_placeholder_year">Alle år</string>
    <string name="search_spinner_placeholder_month">Alle måneder</string>
    <string name="search_spinner_placeholder_day">Alle dager</string>
    <string name="button_mark_as_not_completed">MERK SOM UHØRT</string>
    <string name="button_mark_as_completed">MERK SOM HØRT</string>
    <string name="podplayer_main_controller_description">Start eller stopp avspilling</string>
    <string name="random_pod_background_description">Collage av gutta fra Calcutta</string>
    <string name="rewind_playback_button_description">Hopp tilbake i avspillingen</string>
    <string name="skip_playback_button_description">Hopp fremover i avspillingen</string>
    <string name="random_pod_selection_option_description">Utvalg ved tilfeldig episode</string>
    <string name="downloaded_pod_marker_description">Nedlastet episode</string>
    <string name="download_pod_button_description">Last ned episode</string>
    <string name="play_random_pod_button_description">Spill av tilfeldig episode</string>
    <string name="pod_summary_header">KORT OPPSUMMERT</string>
    <string name="template_pod_filter_result_num">690</string>
    <string name="podplayer_elapsed_template">00:00:00</string>
    <string name="podplayer_duration_template">01:42:69</string>

    <string name="list_drawer_item_pod_list">Episoder</string>
    <string name="list_drawer_item_highlights">Høydepunkter</string>
    <string name="list_drawer_item_random_pod">Tilfeldig episode</string>
    <string name="list_drawer_item_facebook">Facebook</string>
    <string name="list_drawer_item_settings">Innstillinger</string>
    <string name="list_drawer_item_about">Om appen</string>
    <string name="filter_downloaded">Kun nedlastede</string>
    <string name="space_usage_settings_header">Bruk av lagringsplass</string>

    <string name="pods_space_usage_text">%1$.2f MB / %2$d nedlastinger</string>
    <string name="filter_started">Kun påbegynte</string>
    <string name="filter_date_range_from_header">Fra</string>
    <string name="filter_date_range_to_header">Til</string>

    <!-- Notifications -->
    <string name="download_notifications_group_name">Nedlastinger</string>
    <string name="downloading_notification_channel_name">Nedlastingsvarsel</string>
    <string name="downloading_notification_channel_description">Varsler pågående nedlastinger</string>
    <string name="completed_downloads_notification_channel_name">Varsel om fullførte nedlastinger</string>
    <string name="completed_downloads_notification_channel_description">Gir en oversikt over de seneste fullførte nedlastingene</string>

    <string name="playback_notifications_group_name">Avspillinger</string>
    <string name="player_notification_channel_name">Gjeldende avspilling</string>
    <string name="player_notification_channel_description">Gir kontroll over det som spilles for øyeblikket</string>
    <string name="connecton_status_disconnected">Frakoblet</string>

    <string name="notification_jump_back">Hopp tilbake</string>
    <string name="notification_play">Spill av</string>
    <string name="notification_pause">Pause</string>
    <string name="notification_jump_forth">Hopp fremover</string>
    <string name="podplayer_notification_subtitle_minutes_left">igjen</string>


</resources>
