<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/primary_large_rounded"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    android:elevation="4dp">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/podPlayerPodTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#eee"
            android:textSize="16sp"
            android:text="@string/pod_title_template"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/podPlayerProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#eee"
                android:text="@string/podplayer_elapsed_template"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/podPlayerProgressBar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <SeekBar
                android:id="@+id/podPlayerProgressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:theme="@style/AppTheme.AccentSeekBar"
                app:layout_constraintStart_toEndOf="@id/podPlayerProgress"
                app:layout_constraintEnd_toStartOf="@id/podPlayerDuration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/podPlayerDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#eee"
                android:text="@string/podplayer_duration_template"
                app:layout_constraintStart_toEndOf="@id/podPlayerProgressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp">

            <ImageButton
                android:id="@+id/podPlayerJumpBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_round_replay_10_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/podPlayerPlayPauseContainer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/rewind_playback_button_description" />

            <ImageButton
                android:id="@+id/podPlayerPlayPauseContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_round_pause_24px"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/podplayer_main_controller_description" />

            <ImageButton
                android:id="@+id/podPlayerJumpForth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_round_forward_10_24px"
                android:contentDescription="@string/skip_playback_button_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/podPlayerPlayPauseContainer"
                app:layout_constraintTop_toTopOf="parent" />

            <!--<ProgressBar
                android:id="@+id/podplayer_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>