<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:paddingTop="40dp"
    android:paddingBottom="30dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">


    <TextView
        android:id="@+id/podPlayerPodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pod_title_template"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/podDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pod_details_template"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podPlayerPodTitle"
        android:textColor="@color/colorWhite"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/podOptionsContainer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podDetails">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/podOptionPlayWidthGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/podOptionPlay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:background="@drawable/accent_dark_rounded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/podOptionPlayWidthGuideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/podOptionPlayProgressGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <LinearLayout
                android:id="@+id/podProgress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/accent_rounded"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/podOptionPlayProgressGuide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/podOptionIconPlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/podplayer_main_controller_description"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play_arrow_white_24dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<android.support.constraint.ConstraintLayout
            android:id="@+id/podOptionListenedTo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/grey_rounded"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/podOptionPlay"
            app:layout_constraintEnd_toEndOf="@id/podOptionDownload"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/podOptionIconListenedTo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_check_circle_white_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/podOptionDownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/grey_rounded"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/podOptionPlayWidthGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/podOptionDownloadProgressGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.0"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/tertiary_rounded"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/podOptionDownloadProgressGuide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/podOptionIconDownload"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_file_download_white_24dp"
                android:padding="10dp"
                android:contentDescription="@string/download_pod_button_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podOptionsContainer">

        <TextView
            android:id="@+id/podDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pod_summary_header"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/podDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/pod_description_template"
            android:textColor="@color/colorWhiteDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/podDescriptionTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/podOptionListenedTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_mark_as_listened_to"
        android:background="@drawable/grey_rounded"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>